2007-10-03  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (math): @math{k_{75}} is allowed, despite bare
	braces.

2007-10-02  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (math): Make description more accurate.
	Ideas by Patrice Dumas, 16 Sep 2007 12:02:46.

2007-09-26  Karl Berry  <karl@gnu.org>

	* makeinfo/index.c (count_strn_chars): new fn.
	(insert_index_output_line_no): call it.
	(cm_printindex): call it.
	This is to fix off-by-one width computation due to @tie{},
	reported by Werner Lemberg, 16 Sep 2007 16:48:47.

	* makeinfo/cmds.c,
	* makeinfo/xref.c: #include "index.h", instead of explicit	
	extern printing_index.
	* makeinfo/index.c (the_indices, index_element_compare): can be static.
	* makeinfo/index.h: make order of decls match index.c.

2007-09-25  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Six Parts): End segment should not have toc anymore.

2007-09-24  Karl Berry  <karl@gnu.org>

	* makeinfo/makeinfo.c (convert_from_file): free `input_filename' leak.
	Reported by Stephen Compall, 21 Sep 2007 20:25:54.

2007-09-21  Stephen Compall <s11@member.fsf.org>  (tiny change)

	* makeinfo/makeinfo.c (convert_from_file): excise code testing
	case in suffixes that doesn't arise.

2007-09-21  Karl Berry  <karl@gnu.org>

	* makeinfo/makeinfo.c,
	* info/info.c,
	* util/texindex.c,
	* util/install-info.c (main): unify declaration on char *argv[].

2007-09-20  Greg Schafer <gschafer@zip.com.au>  (tiny change)

	* util/dvipdf.test,
	* util/texi2dvi.test (required): need tex, or the tests fail.

2007-09-17  Karl Berry  <karl@gnu.org>

	* util/defs.in (TEXI2DVI_run): try "type" instead of "which".
	Report from Michael Deutschmann, 13 Sep 2007 01:29:39.

	* util/defs.in (optionset_get): use `...`, not $(...).  Still too
	newfangled.  Report from Bert Deknuydt.

2007-09-16  Thien-Thi Nguyen  <ttn@gnuvola.org>  (tiny change)

	* doc/texinfo.tex (w): Do s/indenting manual/manual indenting/.

2007-09-15  Karl Berry  <karl@gnu.org>

	* makeinfo/makeinfo.h,