@@ -1,4 +1,4 @@
-@set UPDATED 29 July 2007
-@set UPDATED-MONTH July 2007
+@set UPDATED 3 October 2007
+@set UPDATED-MONTH October 2007
 @set EDITION 4.11
 @set VERSION 4.11
