@@ -1,0 +1,3 @@
+.deps
+.dirstamp
+malloc.m4
