@@ -213,7 +213,7 @@ C++ libraries
 
 GNU organization
 * Maintain: (maintain).         GNU maintainer guidelines.
-* Standards: (standards).       GNU coding standards.
+* Standards: (standards).        GNU coding standards.
 * Tasks: (tasks).               GNU task list.
 
 GNU music project
