@@ -1,3 +1,11 @@
+2007-10-08  Bruno Haible  <bruno@clisp.org>
+
+	* makeinfo/lang.c (unicode_map): New variable.
+	(cm_search_iso_map): In case of UTF-8 encoding, return a Unicode code
+	point.
+	(add_encoded_char_from_code): New function.
+	(add_encoded_char, cm_accent_generic_no_headers): Use it.
+
 2007-10-03  Karl Berry  <karl@gnu.org>
 
 	* doc/texinfo.txi (math): @math{k_{75}} is allowed, despite bare
